--- a/fftw-3.3_vc12/README
+++ b/fftw-3.3_vc12/README
@@ -1,1 +1,1 @@
-Copy the folder containing fftw-3.3-libs.sln, fftw-3.3_vc12, to the FFTW root, where the find the api, dft, etc. folders.
+The folder containing fftw-3.3.sln, called fftw-3.3_vc12 by default, must be in the FFTW root folder, alongside the api, dft, etc. folders.
